# apia

./: .apia  .gitignore  .travis.yml  HACKING.md  LICENSE  Makefile  README.md  Setup.hs  agda2atp.cabal  apia.cabal
examples/: ATPAxiomDataConstructors.agda  ATPAxiomPostulates.agda  ATPConjecture.agda  ATPDefinition.agda  ATPHint.agda  ATPLocalHints1.agda  ATPLocalHints2.agda  ATPLocalHints3.agda
issues/: Issue11.agda  Issue12.agda  Issue13.agda  Issue19.agda  Issue20.agda  Issue22.agda  Issue27.agda  Issue4.agda  Issue5.agda  Issue8.agda
issues/Issue2/: Issue2b.agda  Issue4.agda
issues/Issue2/Issue2a/: 25-bar1.fof  28-bar2.fof
issues/Issue2/Issue2b/: 25-bar1.fof
issues/Issue2/Issue4/: 26-bar.fof
issues/Issue6/: Lemma1ATP.agda  Makefile  PropertiesATP.agda
issues/Issue81/: Definition07b.agda  Definition07d.agda
issues/Issue81/Definition07c/: 26-bar.fof
issues/issue-81/Definition07a/: 26-bar.fof
issues/issue-81/Definition07b/: 26-bar.fof
issues/issue-81/Definition07d/: 47-A0.fof  50-is.fof
issues/option-universal-quatified-functions/: LambdaLifting.agda  NonFOLHigherOrderFunctions.agda
issues/sharing/AgdaInternalTerms/: ConTerm.agda
issues/universal-quantified-functions-option/: LambdaLifting.agda  NonFOLAgdaInternalTermsVarNonEmptyArgumentsTerm.agda  NonFOLHigherOrderFunctions.agda
notes/: InternalSyntax.agda  PredicateTranslation.agda  TODO.txt  released-atp.txt
notes/README/: Test.agda
notes/atps/: atps-notes.txt  released-atp.txt  run-atps.txt
notes/atps/e/: regression.fof  regression.tptp
notes/atps/predefined-equality/: refl.fof
notes/tptp/: erase-universal-quantifier.fof  erase-universal-quantifier.tptp  fof-to-smt2.fof  fof-to-smt2.tptp  order-does-not-matter.fof  order-does-not-matter.tptp  parsing_error.fof  parsing_error.tptp  tff0-to-smt2.tff0  tff0-to-smt2.tptp
notes/tptp4X/exit-codes/: exitcodes.bash
old/: CHANGES.txt
src/: ATP.hs  ATPs.hs  CheckTPTP.hs  Common.hs  Dump.hs  DumpAgdai.hs  Main.hs  Options.hs  Snapshot.hs
src/AgdaInternal/: DeBruijn.hs  EtaExpansion.hs  Interface.hs  RemoveProofTerms.hs  Vars.hs
src/Apia/: ATPs.hs  CheckTPTP.hs  Common.hs  Defaults.hs  Dump.hs  Main.hs  Options.hs  Prelude.hs  Snapshot.hs  Translation.hs
src/Apia/AgdaInternal/: DeBruijn.hs  EtaExpansion.hs  Interface.hs  RemoveProofTerms.hs  Vars.hs
src/Apia/FOL/: Constants.hs  Primitives.hs  Types.hs
src/Apia/Logic/: Constants.hs  Primitives.hs  Types.hs
src/Apia/Monad/: Base.hs  Environment.hs  Reports.hs  Utils.hs
src/Apia/TPTP/: ConcreteSyntax.hs  Files.hs  Translation.hs  Types.hs  TypesSelector.hs
src/Apia/TargetLang/: Files.hs  SMT2ConcreteSyntax.hs  TPTPConcreteSyntax.hs  Types.hs
src/Apia/Translation/: ClauseBody.hs  Functions.hs  Terms.hs  Types.hs  Types.hs-boot
src/Apia/Utils/: CommitVersion.hs  Directory.hs  Except.hs  File.hs  IO.hs  List.hs  Monad.hs  Name.hs  Names.hs  PrettyPrint.hs  SMT2.hs  Show.hs  String.hs  Text.hs  Version.hs  Yaml.hs
src/FOL/: Constants.hs  Primitives.hs  Types.hs
src/FOL/Translation/: ClauseBody.hs  Functions.hs  Name.hs  Terms.hs  Types.hs  Types.hs-boot
src/Monad/: Base.hs  Environment.hs  Reports.hs
src/TPTP/: ConcreteSyntax.hs  Files.hs  Translation.hs  Types.hs
src/TPTP/ConcreteSyntax/: Common.hs  FOF.hs  TFF0.hs
src/Utils/: Directory.hs  Except.hs  File.hs  List.hs  Monad.hs  Names.hs  Show.hs  String.hs  Text.hs  Version.hs
src/Utils/AgdaAPI/: DeBruijn.hs  EtaExpansion.hs  IgnoreSharing.hs  Interface.hs  RemoveProofTerms.hs  Vars.hs
src/data/: apia.yml
src/fix-whitespace/: fix-whitespace.cabal
test/: Main.hs  Utils.hs
test/ApiaTest/: Errors.hs  NonConjectures.hs  Utils.hs
test/Fail/Errors/: DuplicateFormulaTPTP4XError.agda  DuplicateFormulaTPTP4XError.golden  HigherOrderDefinition.agda  Issue82.golden  MissingSnapshotFile.agda  MissingSnapshotFile.flags  MissingSnapshotFile.golden  NoTheorem.golden  NotErasedProofTerm.golden  OnlyOneClause.golden  SchematicPropositionalFunctionsWithoutPredicateSymbols.agda  Test.hs  UnknownATP.agda  missing-input-file.golden  negative-timeout.golden  only-one-file.golden
test/Fail/errors-shelltestrunner/: NoTheorem.agda  errors.test
test/Fail/non-theorems/: Issue23.agda
test/Succeed/NonConjectures/: Test.hs  dump-types-option.golden  help-option.golden  interface.golden  issue-18.golden  non-conjectures.test  online-atp.golden  only-files-option.golden  unproven-conjecture-no-error-option.golden
test/Succeed/fol-theorems/: Definition01a.agda  Definition01d.agda  Definition12.agda  Eta1.agda  (+14 more)
test/command-line-options/: Foo.agda  NoTheorem.agda  TrivialTheorem.agda  command-line-options.test  command-lines-options.test  options.test
test/errors/: HigherOrderDefinition.agda  NoTheorem.agda  NotErasedProofTerm.agda  OnlyOneClause.agda  PragmaRequired1.agda  PragmaRequired2.agda  PragmaRequired3.agda  SchematicPropositionalFunctions-WithoutPredicateSymbols.agda  SchematicPropositionalFunctionsWithoutPredicateSymbols.agda  TPTP4XError.agda  TrivialTheorem.agda  Underscore.agda  UniversalQuantifiedPropositionalFunctions-WithoutAppPn.agda  UniversalQuantifiedPropositionalFunctions-WithoutPredicateSymbols.agda  errors.test
test/options/: Foo.agda  options.test
test/theorems/: AnonymousModule.agda  DataConstructorsAxioms.agda  Definition04.agda  Definition09.agda  Definition1.agda  Definition10.agda  Definition11.agda  Definition12.agda  Definition2.agda  Definition3.agda  Definition4.agda  Definition5.agda  Definition6.agda  Definition7.agda  Definition8.agda  Definition9.agda  DuplicateAgdaDefinitions1.agda  DuplicateAgdaDefinitions2.agda  Eta1.agda  Eta2.agda  Eta3.agda  Eta4.agda  Eta5.agda  Eta6-Issue8.agda  EtaA.agda  EtaB.agda  EtaD.agda  Existential.agda  Existential1.agda  Existential2.agda  ImplicitArguments.agda  Issue10.agda  Issue12.agda  Issue15.agda  Issue2a.agda  Issue2b.agda  Issue3a.agda  Issue3b.agda  Issue4.agda  Let.agda  (+25 more)
tools/: tptp2waldmeister.bash  tptp4X
tools/TPTP-6.4.0/: tptp4X
tools/dump-agdai/: dump-agdai.cabal
tools/fix-whitespace/: FixWhitespace.hs  fix-whitespace.cabal
(+1206 files in other folders)
