name:          apia
version:       1.1
build-type:    Simple
cabal-version: >= 1.8
author:        Andrés Sicard-Ramírez
license:       MIT
license-file:  LICENSE
maintainer:    Andrés Sicard-Ramírez <asr@eafit.edu.co>
category:      Dependent types
homepage:      https://github.com/asr/apia
bug-reports:   https://github.com/asr/apia/issues/
synopsis:      Program for proving first-order formulae written in Agda using ATPs
tested-with:   GHC == 7.10.2
description:
  This package provides a program for proving first-order
  theorems written in the dependently typed language Agda
  <http://wiki.portal.chalmers.se/agda/pmwiki.php> using first-order
  automatic theorem provers (ATPs), via the translation of the Agda
  formulae to the TPTP format which is a standard for input and output
  for the ATPs <http://www.cs.miami.edu/~tptp/>.
extra-source-files:
        src/Apia/undefined.h

source-repository head
  type:     git
  location: git://github.com/asr/apia.git

executable apia
  main-is:        Apia/Main.hs
  hs-source-dirs: src
  include-dirs:   src/Apia

  extensions:     NoImplicitPrelude

  build-depends:   Agda == 2.5.1.1
                 , base >= 4.6.0.1 && < 4.10
                 , bytestring >= 0.10.0.2 && < 0.11
                 , directory >= 1.2.0.1 && < 1.3
                 , filepath >= 1.3.0.1 && < 1.5
                 -- pretty 1.1.1.2 and 1.1.1.3 do not follow the
                 -- package versioning policy.
                 , pretty >= 1.1.1.0 && < 1.1.1.2 || >= 1.1.2 && < 1.2
                 , process >= 1.1.0.2 && < 1.5
                 , regex-compat >= 0.95.1 && < 0.96
                 , safe >= 0.3.5 && < 0.4
                 , text >= 0.11.3.1 && < 1.3
                 -- tranformers 0.4.0.0 was deprecated.
                 , transformers >= 0.3 && < 0.4 || >= 0.4.1.0 && < 0.6
                 , unordered-containers >= 0.2.5.0 && < 0.3

  build-tools: cpphs >= 1.19

  other-modules:
    Apia.ATPs
    Apia.CheckTPTP
    Apia.Common
    Apia.Dump
    Apia.Logic.Constants
    Apia.Logic.Primitives
    Apia.Logic.Translation.ToFormulae.ClauseBody
    Apia.Logic.Translation.ToFormulae.Functions
    Apia.Logic.Translation.ToFormulae.Terms
    Apia.Logic.Translation.ToFormulae.Types
    Apia.Logic.Types
    Apia.Monad.Base
    Apia.Monad.Environment
    Apia.Monad.Reports
    Apia.Options
    Apia.Prelude
    Apia.Snapshot
    Apia.TPTP.ConcreteSyntax
    Apia.TPTP.Files
    Apia.TPTP.Translation
    Apia.TPTP.Types
    Apia.TPTP.TypesSelector
    Apia.Utils.AgdaAPI.DeBruijn
    Apia.Utils.AgdaAPI.EtaExpansion
    Apia.Utils.AgdaAPI.IgnoreSharing
    Apia.Utils.AgdaAPI.Interface
    Apia.Utils.AgdaAPI.RemoveProofTerms
    Apia.Utils.AgdaAPI.Vars
    Apia.Utils.Directory
    Apia.Utils.Except
    Apia.Utils.List
    Apia.Utils.Monad
    Apia.Utils.Name
    Apia.Utils.PrettyPrint
    Apia.Utils.Show
    Apia.Utils.String
    Apia.Utils.Text
    Apia.Utils.Version
    Paths_apia

  ghc-options:
    -w
    -Werror
    -- Using cpphs as the C preprocessor.
    -pgmP cpphs -optP --cpp

  if impl(ghc >= 7.6)
     ghc-options: -fwarn-alternative-layout-rule-transitional
                  -- The above option isn't documented in GHC 7.10.1.
                  -fwarn-deprecated-flags
                  -fwarn-dodgy-exports
                  -fwarn-dodgy-foreign-imports
                  -fwarn-dodgy-imports
                  -fwarn-duplicate-exports
                  -fwarn-hi-shadowing
                  -fwarn-identities
                  -fwarn-incomplete-patterns
                  -fwarn-incomplete-record-updates
                  -fwarn-incomplete-uni-patterns
                  -fwarn-missing-fields
                  -- 18 July 2014. We cannot enable this option
                  -- because we are using the Paths_apia module.
                  -- -fwarn-missing-import-lists
                  -fwarn-missing-local-sigs
                  -fwarn-missing-methods
                  -fwarn-missing-signatures
                  -fwarn-monomorphism-restriction
                  -fwarn-name-shadowing
                  -fwarn-orphans
                  -fwarn-overlapping-patterns
                  -fwarn-tabs
                  -fwarn-type-defaults
                  -fwarn-unrecognised-pragmas
                  -fwarn-unused-binds
                  -fwarn-unused-do-bind
                  -fwarn-unused-imports
                  -fwarn-unused-matches
                  -fwarn-unsupported-calling-conventions
                  -fwarn-warnings-deprecations
                  -fwarn-wrong-do-bind

  if impl(ghc >= 7.8)
     ghc-options: -fwarn-empty-enumerations
                  -fwarn-inline-rule-shadowing
                  -fwarn-overflowed-literals
                  -fwarn-typed-holes
                  -fwarn-unsupported-llvm-version

  -- The following option generates warnings with GHC 7.10.1.
  if impl(ghc < 7.10)
     ghc-options: -fwarn-auto-orphans

  if impl(ghc >= 7.10)
     ghc-options: -fwarn-deriving-typeable
                  -fwarn-unticked-promoted-constructors

  -- This option will be removed in GHC 8.0.1.
  if impl(ghc >= 7.6) && impl(ghc < 8.0)
    ghc-options: -fwarn-pointless-pragmas

  -- This option will be deprected in GHC 8.0.1.
  if impl(ghc >= 7.8) && impl(ghc < 8.0)
    ghc-options: -fwarn-duplicate-constraints

  -- This option will be deprected in GHC 8.0.1.
  if impl(ghc >= 7.10) && impl(ghc < 8.0)
    ghc-options: -fwarn-context-quantification

  if impl(ghc >= 8.0)
    ghc-options: -Wmissing-pat-syn-sigs
                 -Wnoncanonical-monad-instances
                 -Wnoncanonical-monoid-instances
                 -Wredundant-constraints
                 -Wsemigroup

  -- From Agda.cabal: If someone installs Agda with the setuid bit
  -- set, then the presence of +RTS may be a security problem (see GHC
  -- bug #3910).  However, we sometimes recommend people to use +RTS
  -- to control Agda's memory usage, so we want this functionality
  -- enabled by default.
  ghc-options: -rtsopts

  ghc-prof-options: -fprof-auto
