name:          fix-whitespace
version:       0.1
cabal-version: >= 1.8
build-type:    Simple
description:   Fixes whitespace issues.
tested-with:   GHC == 8.2.2

executable fix-whitespace
  main-is:          FixWhitespace.hs

  build-depends:  base      >= 4.7.0.2 &&  < 4.11
                , directory >= 1.2.1.0 &&  < 1.4
                , filemanip >= 0.3.6.2 &&  < 0.4
                , text      >= 0.11.3.1 && < 1.3

  -- Only warnings.c
  if impl(ghc >= 7.8)
     ghc-options: -Wall
                  -fwarn-auto-orphans
                  -fwarn-identities
                  -fwarn-incomplete-record-updates
                  -fwarn-incomplete-uni-patterns
                  -fwarn-missing-import-lists
                  -fwarn-missing-local-sigs
                  -fwarn-monomorphism-restriction
                  -fwarn-tabs
--                  -Werror
